# oj-eval-aider-018-20260708181849

./: CMakeLists.txt  README.md
score/: score.sh  test.scm
score/data/: 104.in  105.in  20.in  21.in  60.in  72.in  99.in
score/more-tests/: 7.in
src/: Def.cpp  Def.hpp  RE.cpp  RE.hpp  evaluation.cpp  expr.cpp  expr.hpp  main.cpp  parser.cpp  syntax.cpp  syntax.hpp  value.cpp  value.hpp
